# kiran-widgets-qt5

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  TODO  TODO.md  docs_generate.cmake  kiranwidgets-qt5.pc.in  kiranwidgets-qt5.pro  main-page.md  main.cpp  test.sh
data/: CMakeLists.txt
docs/: Doxyfile  Doxyfile.in
examples/: CMakeLists.txt
examples/kiran-application/: CMakeLists.txt
examples/kiran-application/src/: main.cpp  window-demo.cpp  window-demo.h
examples/kiran-message-box/: CMakeLists.txt
examples/kiran-message-box/instantiation/: CMakeLists.txt  main.cpp
examples/kiran-message-box/static_method/: CMakeLists.txt  main.cpp
examples/kiran-titlebar-window/: CMakeLists.txt
examples/kiran-titlebar-window/cpp/: CMakeLists.txt  main.cpp  titlebar-window-cpp.cpp  titlebar-window-cpp.h
examples/kiran-titlebar-window/simple/: CMakeLists.txt  main.cpp  titlebar-window-simple.cpp  titlebar-window-simple.h
examples/kiran-titlebar-window/ui/: CMakeLists.txt  main.cpp  titlebar-window-ui.cpp  titlebar-window-ui.h  titlebar-window-ui.ui
kiran-titlebar-window/: global_define.h  images.qrc  kiran-titlebar-window-images.qrc  kiran-titlebar-window-private.cpp  kiran-titlebar-window-private.h  kiran-titlebar-window-themes.qrc  kiran-titlebar-window.cpp  kiran-titlebar-window.h  kiran-titlebar-window.pri  themes.qrc  xlib-helper.cpp  xlib-helper.h
kiran-titlebar-window/examples/KiranTitlebarWindow_CPP/: main.cpp  titlebar-window-cpp.cpp  titlebar-window-cpp.h  titlebar-window-cpp.pro
kiran-titlebar-window/examples/KiranTitlebarWindow_Simple/: main.cpp  titlebar-window-simple.cpp  titlebar-window-simple.h  titlebar-window-simple.pro  titlebar-window-simple.ui
kiran-titlebar-window/examples/KiranTitlebarWindow_UI/: main.cpp  titlebar-window-ui.cpp  titlebar-window-ui.pro
kiran-titlebar-window/kiran-titlebar-window-themes/: black_theme.qss
kiran-titlebar-window/themes/: black_theme.qss
licenses/: Third_Party_Open_Source_Software_Notice.md
public/: xlib-helper.h
resources/: kiranwidgets-qt5-resources.qrc
resources/style-detail/: kiran-dark.css
resources/themes/: kiran-messagebox_black.qss  kiran-titlebar-window_black.qss
src/kiran-style/: kiran-private-defines.h  kiran-public-define.h  kiran-style-helper.cpp  kiran-style-helper.h  kiran-style-private-defines.h  kiran-style-public-define.h  style-detail-fetcher.cpp  style-detail-fetcher.h  style-property-helper.cpp  style-property-helper.h  style.cpp  style.h  widget-private-property-helper.cpp  widget-private-property-helper.h  widget-property-helper.cpp  widget-property-helper.h
src/kiran-style/delegate/: combo-box-item-delegate.cpp  combo-box-item-delegate.h
src/kiran-style/draw-helper/: draw-button-helper.cpp  draw-button-helper.h  draw-combo-box-helper.cpp  draw-combo-box-helper.h  draw-common-helper.cpp  draw-common-helper.h  draw-frame-helper.cpp  draw-frame-helper.h  draw-image-selector-helper.cpp  draw-image-selector-helper.h  draw-item-view-helper.cpp  draw-item-view-helper.h  draw-line-edit-helper.cpp  draw-line-edit-helper.h  draw-menu-helper.cpp  draw-menu-helper.h  draw-progress-bar-helper.cpp  draw-progress-bar-helper.h  draw-scroll-bar-helper.cpp  draw-scroll-bar-helper.h  draw-search-box-helper.cpp  draw-search-box-helper.h  draw-slider-helper.cpp  draw-slider-helper.h  draw-spinbox-helper.cpp  draw-spinbox-helper.h  draw-tab-bar-helper.cpp  draw-tab-bar-helper.h
src/kiran-style/style-data/: style-detail-fetcher.h  style-property-helper.h
src/kiran-style/style-helper/: draw-button-helper.cpp  draw-button-helper.h  draw-combo-box-helper.cpp  draw-combo-box-helper.h  draw-common-helper.cpp  draw-common-helper.h  draw-frame-helper.h  draw-item-view-helper.h  draw-line-edit-helper.cpp  draw-line-edit-helper.h  draw-menu-helper.cpp  draw-menu-helper.h  draw-progress-bar-helper.cpp  draw-progress-bar-helper.h  draw-scroll-bar-helper.h  draw-search-box-helper.cpp  draw-spinbox-helper.cpp  draw-tab-bar-helper.h
src/public/: xlib-helper.cpp  xlib-helper.h
src/widgets/common/: common.cpp  drop-shadow-color.h  frameless-background-frame.cpp  frameless-background-frame.h  logging-category.cpp  logging-category.h  widget-draw-helper.cpp  widget-draw-helper.h
src/widgets/font-monitor/: font-monitor-factory.cpp  font-monitor-factory.h  marco-title-font-monitor.cpp  marco-title-font-monitor.h  (+2 more)
test/: CMakeLists.txt  kiran-application-test.cpp  kiran-collapse-test.cpp  kiran-color-block-test.cpp  kiran-hover-tips-test.cpp  kiran-image-selector-test.cpp  kiran-input-dialog-test.cpp  kiran-label-test.cpp  kiran-message-box-test.cpp  kiran-passwd-edit-test.cpp  kiran-sidebar-widget-test.cpp  kiran-tips-test.cpp
test/kiran-style/: CMakeLists.txt  child-window.cpp  child-window.h  main.cpp  widget.cpp  widget.h  widget.ui
test/kiranwidgets-test/: CMakeLists.txt  main.cpp  message-demo.cpp  message-demo.h  widget.cpp  widget.ui
translations/: kiranwidgets-qt5.bo_CN.ts  kiranwidgets-qt5.kk_KG.ts  kiranwidgets-qt5.kk_KZ.ts  kiranwidgets-qt5.mn_MN.ts  kiranwidgets-qt5.ug_CN.ts  kiranwidgets-qt5.zh_CN.ts
widgets/font-monitor/: font-monitor-factory.h  marco-title-font-monitor.cpp  mate-desktop-font-monitor.cpp  mate-desktop-font-monitor.h
widgets/kiran-application/: kiran-application-private.cpp  kiran-application-private.h  kiran-application.cpp  kiran-application.h
widgets/kiran-message-box/: kiran-message-box-private.cpp  kiran-message-box-private.h  kiran-message-box.h
widgets/kiran-search-box/: kiran-search-box-private.cpp  kiran-search-box-private.h  kiran-search-box.cpp  kiran-search-box.h
widgets/kiran-single-application/: kiran-single-application.cpp  kiran-single-application.h  kiran-single-application_p.h
widgets/kiran-style/: kiran-global-defines.h  style.cpp  style.h
widgets/kiran-switch-button/: kiran-switch-button-private.h  kiran-switch-button.cpp  kiran-switch-button.h
widgets/kiran-titlebar-window/: kiran-titlebar-window-private.cpp  kiran-titlebar-window-private.h  kiran-titlebar-window.cpp  kiran-titlebar-window.h
(+127 files in other folders)
